crates/sui-prover/tests/snapshots/sum_slice_range/sum_range.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 275
expression: output
---
Verification successful
